# octodns-config

./: README.md  octodns.sh  pyproject.toml  requirements.txt
config/: netbox.yml  test.yml
