[project]
name = "octodns-ndom91"
version = "0.1.0"
description = "ndom91 octodns config"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "octodns >=1.9.1",
    "octodns-bind >=0.0.6",
    "octodns-cloudflare >=0.0.7",
    "octodns-netbox-dns >=0.3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
octodns-ndom91 = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["octodns.sh"]

